--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body, html {
     overflow: hidden;
     width: 100%;
     height: 100%;
+    background: #000; /* Set background to black */
 }
 
 .video-container {
@@ -14,11 +15,10 @@ body, html {
     transform: translate(-50%, -50%);
     width: 100px;
     height: 100px;
-    z-index: 10; /* Ensure video is on top */
 }
 
 video {
     width: 100%;
     height: 100%;
-    border-radius: 50%;
+    border-radius: 50%; /* Circular cropping */
 }
